<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/solution_tv"
        android:textSize="32sp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/result_tv"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_tv"
        android:text="0"
        android:textSize="64sp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/buttons_layout"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:background="#F1F1F1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#F80303"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_open_parentheses"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#656565"
                android:text="@string/open_parentheses"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_closed_parentheses"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#656565"
                android:text="@string/closed_parentheses"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#F80303"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_point"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>